--- a/scripts/1_Create_files.ipynb
+++ b/scripts/1_Create_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f6b9e40f",
    "metadata": {},
    "outputs": [
@@ -20,17 +20,17 @@
     "\n",
     "# Subir un nivel desde scripts/\n",
     "base = os.path.abspath(\"..\")\n",
-    "print(\"📂 Creando carpeta 'data/' (fuera de scripts) con os\")\n",
+    "print(\"Creando carpeta 'data/' (fuera de scripts) con os\")\n",
     "\n",
     "data_path = os.path.join(base, \"data\")\n",
     "os.makedirs(data_path, exist_ok=True)\n",
     "\n",
-    "print(f\"✅ Carpeta creada o ya existente: {data_path}\")"
+    "print(f\"Carpeta creada o ya existente: {data_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b07769cb",
    "metadata": {},
    "outputs": [
@@ -48,17 +48,17 @@
     "\n",
     "# Subir un nivel desde scripts/\n",
     "base = Path(\"..\").resolve()\n",
-    "print(\"💾 Creando carpeta 'database/' (fuera de scripts) con pathlib\")\n",
+    "print(\"Creando carpeta 'database/' (fuera de scripts) con pathlib\")\n",
     "\n",
     "database_path = base / \"database\"\n",
     "database_path.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "print(f\"✅ Carpeta creada o ya existente: {database_path}\")"
+    "print(f\"Carpeta creada o ya existente: {database_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "485e2f2e",
    "metadata": {},
    "outputs": [
@@ -75,17 +75,17 @@
     "import os\n",
     "\n",
     "base = os.path.abspath(\"..\")\n",
-    "print(\"📊 Creando carpeta 'reports/' (fuera de scripts) con os\")\n",
+    "print(\"Creando carpeta 'reports/' (fuera de scripts) con os\")\n",
     "\n",
     "reports_path = os.path.join(base, \"reports\")\n",
     "os.makedirs(reports_path, exist_ok=True)\n",
     "\n",
-    "print(f\"✅ Carpeta creada o ya existente: {reports_path}\")"
+    "print(f\"Carpeta creada o ya existente: {reports_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f2bb0524",
    "metadata": {},
    "outputs": [
@@ -102,17 +102,17 @@
     "from pathlib import Path\n",
     "\n",
     "base = Path(\"..\").resolve()\n",
-    "print(\"⚙️ Creando carpeta 'ci/' (fuera de scripts) con pathlib\")\n",
+    "print(\"Creando carpeta 'ci/' (fuera de scripts) con pathlib\")\n",
     "\n",
     "ci_path = base / \"ci\"\n",
     "ci_path.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "print(f\"✅ Carpeta creada o ya existente: {ci_path}\")"
+    "print(f\"Carpeta creada o ya existente: {ci_path}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "45ff08de",
    "metadata": {},
    "outputs": [
@@ -129,12 +129,12 @@
     "import os\n",
     "\n",
     "base = os.path.abspath(\"..\")\n",
-    "print(\"🔧 Creando carpeta 'git/' (fuera de scripts) con os\")\n",
+    "print(\"Creando carpeta 'git/' (fuera de scripts) con os\")\n",
     "\n",
     "git_path = os.path.join(base, \"git\")\n",
     "os.makedirs(git_path, exist_ok=True)\n",
     "\n",
-    "print(f\"✅ Carpeta creada o ya existente: {git_path}\")"
+    "print(f\"Carpeta creada o ya existente: {git_path}\")"
    ]
   },
   {
