--- a/scripts/4_Proceso_ETL.ipynb
+++ b/scripts/4_Proceso_ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2fc2a791",
    "metadata": {},
    "outputs": [
@@ -62,11 +62,11 @@
     "df[\"fecha_atencion\"] = pd.to_datetime(df[\"fecha_atencion\"], errors=\"coerce\")\n",
     "df[\"fecha_atencion\"] = df[\"fecha_atencion\"].dt.strftime(\"%Y-%m-%d\")\n",
     "\n",
-    "print(\"\\n📋 Tipos de datos después de limpieza:\")\n",
+    "print(\"\\nTipos de datos después de limpieza:\")\n",
     "print(df.dtypes)\n",
     "\n",
     "df.to_csv(archivo_salida, index=False, encoding=\"utf-8\")\n",
-    "print(f\"\\n✅ Archivo limpio guardado como: {archivo_salida}\")\n",
+    "print(f\"\\nArchivo limpio guardado como: {archivo_salida}\")\n",
     "print(f\"Total de registros limpios: {len(df)}\")\n"
    ]
   }
