Fase 6 ejecutada correctamente

--- a/scripts/6_Reportes.ipynb
+++ b/scripts/6_Reportes.ipynb
@@ -2,10 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "33f5d4c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datos cargados correctamente: 3002 registros\n",
+      "Gráfico 1 guardado: pacientes_atendidos_por_servicio.png\n",
+      "Gráfico 2 guardado: distribución_por_sexo.png\n",
+      "Gráfico 3 guardado: distribución_de_edades.png\n",
+      "\n",
+      "Promedio de montos por distrito:\n",
+      "distrito\n",
+      "Miraflores     274.88\n",
+      "Los Olivos     274.82\n",
+      "Desconocido    273.96\n",
+      "San Isidro     272.77\n",
+      "La Molina      270.03\n",
+      "Comas          270.02\n",
+      "Surco          269.73\n",
+      "Callao         267.19\n",
+      "Chorrillos     260.98\n",
+      "Name: monto, dtype: float64\n",
+      "Gráfico 4 guardado: promedio_de_montos_por_distrito.png\n",
+      "\n",
+      "Todos los reportes fueron generados exitosamente.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -81,7 +108,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.0"
   }
  },
